environments/common/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: dashboard-oidc
  namespace: dashboard
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: dashboard-route
  oidc:
    provider:
      issuer: "https://auth.simonbrundin.com"
    clientID: "392027778305753717"
    clientSecret:
      name: "dashboard-oidc-client"
    redirectURL: "https://dashboard.simonbrundin.com/oauth2/callback"
    logoutPath: "/logout"
